<resources>
    <string name="app_name">Popular Movies</string>
    <string name="order_by">Order By</string>
    <string name="movie_item_poster">Movie poster</string>
    <string name="select_order">Select order</string>
    <string name="rate">Rate :</string>
    <string name="overview">Overview</string>
    <string name="launch_date">Launch date :</string>
    <string name="title">Title :</string>
    <string name="detail_movie_poster_image">Movie poster</string>
    <string name="generic_error">We got a connection error!</string>
    <string name="retry">Retry</string>
    <string name="summary">Summary</string>
    <string name="videos">Trailers</string>
    <string name="review">Reviews</string>
    <string name="author_img">Image of Author</string>
    <string name="no_reviews">No reviews for this movie</string>
    <string name="movie_rating">%1$s rating</string>
    <string-array name="order_array">
        <item name="most_popular">Most popular</item>
        <item name="top_rated">Top rated</item>
        <item name="top_bookmarked">Bookmarks</item>
    </string-array>
</resources>
