<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable name="viewModel" type="com.eccard.popularmovies.ui.moviedetail.reviews.ReviewsViewModel" />
    </data>


    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ProgressBar
            android:layout_width="@dimen/pb_width"
            android:layout_height="@dimen/pb_height"
            android:visibility="@{viewModel.loading}"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="@{viewModel.showError}"
            >

            <TextView
                android:id="@+id/tv_generic_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:text="@string/generic_error"
                android:visibility="@{viewModel.showEmpty}"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:text="@string/no_reviews"
                android:visibility="@{viewModel.showEmpty}"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retry"
                android:layout_gravity="center_horizontal|bottom"
                android:onClick="@{() -> viewModel.getReviews(1)}"
                />
        </LinearLayout>

    </FrameLayout>

</layout>