<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="secondaryViewModel"
            type="com.eccard.popularmovies.ui.moviedetail.summary.SummaryViewModel" />
    </data>

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"

        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="16dp"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/btn_bookmark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> secondaryViewModel.changeBookMarkState()}"
                    android:layout_gravity="center"/>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:text="@{secondaryViewModel.movie.original_title}"
                        tools:text="olasfsafas"/>
                        <!--android:text="@{secondaryViewModel.movie.original_title}"-->

                </TableRow>


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    >

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textStyle="bold"
                        android:text="@string/rate"

                        />

                    <TextView
                        android:id="@+id/tv_rate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:text="@{Float.valueOf(secondaryViewModel.movie.vote_average).toString()}"
                        tools:text="aflkjaskfasdfasdfasd"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    >

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textStyle="bold"
                        android:text="@string/launch_date"
                         />

                    <TextView
                        android:id="@+id/tv_lauch_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:text="@{secondaryViewModel.movie.release_date}"/>
                </TableRow>


                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="16dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textStyle="bold"
                    android:text="@string/overview"
                    />

                <TextView
                    android:id="@+id/tv_over_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:text="@{secondaryViewModel.movie.overview}"/>


            </LinearLayout>
        </ScrollView>

    </androidx.cardview.widget.CardView>

</layout>
